# sdk-nrf

./: CODEOWNERS  Kconfig.liteinstall  Kconfig.nrf  my_ed25519_priv_key.pem  my_ed25519_priv_key1.pem  my_ed25519_priv_key2.pem  pm_static_nrf54l15dk_nrf54l15_cpuapp.yml  west.yml
cmake/sysbuild/: sign.cmake
include/: bl_crypto.h
samples/bootloader/boards/: nrf54l15dk_nrf54l15_cpuapp.conf
samples/bootloader/src/: main.c
samples/liteupdateapp/: BOOTLOADER_image_default.cmake  CMakeLists.txt  Kconfig  Kconfig.sysbuild  generate_metadata.py  prj.conf  sysbuild.cmake
samples/liteupdateapp/src/: main.c
samples/matter/lock/: Kconfig.sysbuild  pm_static_nrf5340dk_nrf5340_cpuapp.yml
samples/nrf_compress/mcuboot_update/: pm_static_nrf5340dk_nrf5340_cpuapp.yml  prj.conf  sysbuild.conf
samples/nrf_compress/mcuboot_update/sysbuild/mcuboot/: prj.conf
scripts/bootloader/: do_sign.py  hash.py  keygen.py  provision.py  validation_data.py
scripts/bootloader/tests/: conftest.py  validation_data_test.py  zephyr.hex
subsys/bootloader/bl_crypto/: CMakeLists.txt  Kconfig  bl_crypto.c  bl_crypto_ed25519.c  bl_crypto_sha512.c
subsys/bootloader/bl_validation/: Kconfig  bl_validation.c
subsys/partition_manager/: CMakeLists.txt
sysbuild/: CMakeLists.txt  Kconfig.liteinstall  Kconfig.secureboot  Kconfig.sysbuild  liteinstall.cmake
